--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Allen Lin. It uses data from weatherstack.com and mapbox.com</p>
         <img class="portrait" src="./img/profile.png" alt="" />
     </div>
     {{>footer}}
